--- a/caker/package.json
+++ b/caker/package.json
@@ -13,15 +13,15 @@
     "classnames": "^2.3.1",
     "formik": "^2.2.9",
     "morgan": "^1.10.0",
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "next": "^11.1.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "yup": "^0.32.9"
   },
   "devDependencies": {
     "bootstrap": "^5.0.0-beta3",
-    "eslint": "7.32.0",
-    "eslint-config-next": "11.1.2",
+    "eslint": "^7.32.0",
+    "eslint-config-next": "^11.1.2",
     "eslint-config-prettier": "^8.3.0",
     "prettier": "^2.4.1"
   }
