--- a/caker/package.json
+++ b/caker/package.json
@@ -9,8 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/react-fontawesome": "^0.1.15",
+    "@popperjs/core": "^2.10.2",
     "axios": "^0.22.0",
     "classnames": "^2.3.1",
+    "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
     "morgan": "^1.10.0",
     "next": "^11.1.2",
