--- a/caker/package.json
+++ b/caker/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.1.15",
     "@popperjs/core": "^2.10.2",
     "axios": "^0.22.0",
+    "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "font-awesome": "^4.7.0",
     "formik": "^2.2.9",
@@ -25,7 +26,6 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "bootstrap": "^5.0.0-beta3",
     "eslint": "^7.32.0",
     "eslint-config-next": "^11.1.2",
     "eslint-config-prettier": "^8.3.0",
